--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -47,6 +47,9 @@ img {
 .contact{
 	display: inline-block;
 }
+.hide{
+	display: hidden;
+}
 /*element.style {
     width: 256px;
     height: 256px;
