--- a/public/assets/css/admin_style.css
+++ b/public/assets/css/admin_style.css
@@ -1,7 +1,7 @@
 html, body {
 	font-family: Consolas, monaco, monospace;
 	background-color: #ba6e79;
-	color: #F8F8F2;
+	color: #111104;
 }
 
 .container {
